fixed white space in tablet

--- a/main.css
+++ b/main.css
@@ -547,6 +547,10 @@ header nav {
     font-size: 3rem;
 }
 
+h3:nth-of-type(2){
+    margin-bottom:5%;
+}
+
 .skill-tools-container{
     position: relative;
     display: flex;
@@ -612,13 +616,14 @@ header nav {
 }
 
 .projects {
-    margin-top: 2%;
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
 }
 
 .project-card {
     width: 95%;
+    margin-top: 5%;
 }
 
 label {
@@ -634,9 +639,13 @@ textarea {
 
 button {
     font-size: 1.4rem;
+    width: 95%;
    
 }
 
+form { 
+    padding-left: 9%;
+}
 
 
 footer {
@@ -671,6 +680,11 @@ footer p {
 footer a {
     margin-top: 5%;
     font-size: 1.4rem;
+}
+
+h3:nth-of-type(5) {
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 
